--- a/adap/css/style.css
+++ b/adap/css/style.css
@@ -46,3 +46,75 @@ a{
 		font-size:50%;
 	}
 }
+#welcome{
+	display: inline-block;
+	text-transform: uppercase;
+	font-family: "Arial";
+	font-size:40px;
+	color:white;
+	position: absolute;
+	margin-left:50%;
+	transform: translateX(-50%);
+	margin-top:20%;
+	vertical-align: middle;
+
+}
+@media screen and (max-width: 1102px){
+	#welcome{
+		font-size:24px;
+	}
+}
+@media screen and (max-width: 674px){
+	#welcome{
+		font-size:18px;
+	}
+}
+@media screen and (max-width: 500px){
+	#welcome{
+		font-size:15px;
+	}
+}
+
+#nice{
+	display: inline-flex;
+	font-size: 60px;
+	font-weight: 700;
+	text-transform: uppercase;
+	color:white;
+	position:absolute;
+	margin-top:25%;
+	margin-left:40%;
+	transform: translateX(-30%);
+	font-family: "Arial";
+	color:white;
+	vertical-align: middle;
+}
+@media screen and (max-width: 1190px){
+	#nice{
+		font-size:36px;
+	}
+}
+@media screen and (max-width: 727px){
+	#nice{
+		font-size:30px;
+	}
+}
+@media screen and (max-width: 620px){
+	#nice{
+		font-size:25px;
+	}
+}
+@media screen and (max-width: 516px){
+	#nice{
+		font-size:20px;
+	}
+}
+#button{
+	position: absolute;
+	z-index: 2;
+	width:17%;
+	height:auto;
+	margin-top:35%;
+	margin-left:50%;
+	transform: translateX(-60%);
+}
