--- a/main/style/style.css
+++ b/main/style/style.css
@@ -1,9 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap');
-/* Intro */
-.intro{
-	width:100vw;
-}
 /* Header */
+/* Logo and Intro*/
+@media screen and (min-width:1300px){
+	.intro{
+		position: absolute;
+		width:100vw;
+		min-height:700px;
+		background:url(../video/bg.gif);
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
+	}
+	ul{
+		position: absolute;
+		top:200px;
+		left:4%;
+		transform: translate(-4%, -25%);
+	}
+}
+@media screen and (max-width:1300px){
+	.intro{
+		display: none;
+	}
+	ul{
+		position: absolute;
+		top:200px;
+		left:50%;
+		transform: translate(-50%, -25%);
+	}
+}
 html{
 	scroll-behavior: smooth;
 }
@@ -20,14 +45,12 @@ header{
 	align-items: center;
 	min-height: 700px;
 	width:100vw;
-	background: #111;
+	background: black;
 }
-ul{
-	position: absolute;
-	top:25%;
-	left:50%;
-	transform: translateX(-50%);
+.nav{
+	display: flex;
 }
+
 ul li{
 	position: relative;
 	list-style: none;
@@ -154,43 +177,88 @@ ul li a:hover:before{
 #contacts{
 	width:100vw;
 	min-height: 700px;
-	background-color:#111;
+	background-color:black;
+	color:white;
 }
-.contact{
-	max-width: 350px;
-	min-height:500px;
-	background-color:white;
-	margin:0 auto;
-	border-radius: 24px;
+.box{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
 }
-#name, #surname, #email{
-	max-width:200px;
-	border:3px solid #111;
-	border-radius:10px;
-	margin-left:20%;
-	margin-top:15px;
+.box a{
+	position: relative;
+	padding:10px 30px;
+	margin: 45px 15px;
+	color:#21ebff;
+	text-decoration: none;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	font-size:20px;
+	transition:0.5s;
+	-webkit-box-reflect: below 1px linear-gradient(transparent, #0003);
+}
+.box a:nth-child(1){
+	filter:hue-rotate(115deg);
+}
+.box a:nth-child(3){
+	filter:hue-rotate(270deg);
+}
+.box a:before{
+	content:'';
+	position: absolute;
+	top:0;
+	left:0;
+	width:10px;
+	height:10px;
+	border-top:2px solid  #21ebff;
+	border-left:2px solid  #21ebff;
+	transition:0.5s;
+	transition-delay: 0.5s;
+}
+.box a:after{
+	content:'';
+	position: absolute;
+	bottom:0;
+	right:0;
+	width:10px;
+	height:10px;
+	border-bottom:2px solid  #21ebff;
+	border-right:2px solid  #21ebff;
 	transition: 0.5s;
-	text-align: center;
+	transition-delay: 0.5s;
 }
-textarea{
-	border-radius: 10px;
-	transition: 0.5s;
-	text-align: center;
+.box a:hover:before{
+	width:100%;
+	height:100%;
+	transition-delay: 0s;
 }
-#name:focus, #surname:focus, #email:focus, textarea:focus{
-	border-radius: 0px;
+.box a:hover:after{
+	width:100%;
+	height:100%;
+	transition-delay: 0s;
 }
-#review{
-	border:3px solid #111;
-	width:300px;
-	height:150px;
-	margin:20px 7.5%;
+.box a:hover{
+	background:#21ebff;
+	box-shadow: 0 0 50px #21ebff;
+	color:#111;
+	transition-delay: 0.5s;
 }
-input[type="submit"]{
-	margin-left:20%;
-	width:200px;
-	height:50px;
+.logo{
+	display:flex;
+	align-items: center;
+	justify-content: center;
 }
+.logo img{
+	width:650px;
+	height:auto;
+}
+/* Copyrights */
 #copyrights{
 	text-align: center;
+}
+/* Other Settings */
+header{
+	min-height:100vh;
+	min-height:700px;
 }
